--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     ]
   },
   "dependencies": {
+    "@alitajs/routes": "^2.5.14",
     "@ant-design/pro-layout": "^5.0.12",
     "@umijs/plugin-esbuild": "^1.0.1",
     "@umijs/preset-react": "1.x",
